--- a/src/components/sections/Certification.astro
+++ b/src/components/sections/Certification.astro
@@ -7,8 +7,8 @@ import { certificates } from "@cv"
 <Section title="Certifications">
   <ul>
     {
-      certificates.map(({ name, issuer, date, url }) => {
-        const startYear = new Date(date).getFullYear()
+      certificates.map(({ name, issuer, url }) => {
+        // const startYear = new Date(date).getFullYear()
 
         return (
           <li>
