--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ import Education from "@/components/sections/Education.astro"
 import Certification from "@/components/sections/Certification.astro"
 import Experience from "@/components/sections/Experience.astro"
 import Hero from "@/components/sections/Hero.astro"
-import Projects from "@/components/sections/Projects.astro"
 import Skills from "@/components/sections/Skills.astro"
 import KeyboardManager from "@/components/KeyboardManager.astro"
+// import Projects from "@/components/sections/Projects.astro"
 
 import { basics } from "@cv"
 const { name, label } = basics
