--- a/src/components/KeyboardManager.astro
+++ b/src/components/KeyboardManager.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import 'hotkeypad/reset.css'
 import 'hotkeypad/index.css'
 import { type SocialIcon } from "@/types"
@@ -218,4 +218,4 @@ const profilesInfo = profiles.map(({ network, url }) => {
     padding: 2px 4px;
     font-size: 12px;
   }
-</style>
+</style> -->
