--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Certification from "@/components/sections/Certification.astro"
 import Experience from "@/components/sections/Experience.astro"
 import Hero from "@/components/sections/Hero.astro"
 import Skills from "@/components/sections/Skills.astro"
-import KeyboardManager from "@/components/KeyboardManager.astro"
+// import KeyboardManager from "@/components/KeyboardManager.astro"
 // import Projects from "@/components/sections/Projects.astro"
 
 import { basics } from "@cv"
@@ -18,14 +18,14 @@ const { name, label } = basics
   <main>
     <Hero />
     <About />
+    <Skills />
     <Experience />
     <Education />
     <Certification />
-    <Skills />
     <!-- <Projects /> -->
   </main>
 
-  <KeyboardManager />
+  <!-- <KeyboardManager /> -->
 </Layout>
 
 <style>
